# cpp-bit-fields

./: CMakeLists.txt  README.md  bitfield.h  testbf.cpp
